package bataillenavale.engine;

/**
 * @author Horatiu Cirstea
 *
 */
public enum Cmd {
	UP,
	DOWN,
	IDLE,
    ENTER,
    QUIT,
    SAVE,
    CLICK,
	CHANGE,
    LEFT,
    RIGHT,
    ROTATE,
    START
}
