@startuml

title Moteur du jeux

title Diagramme de classe du package engine

package engine {

    class DrawingPanel {
        + paint(g : Graphics)
        + drawGame() 
    }
    DrawingPanel --> JPanel
    DrawingPanel --"1" GamePainter

    interface Game {
        + evolve(userCmd : Cmd, userClick : Point2D);
        + isFinished() : boolean
    }

    interface GameController {
        + getCommand() : Cmd
    }

    interface GamePainter {
        + draw(BufferedImage image)
        + getWidth() : int
	    + getHeight() : int
    }

    enum Cmd{
        UP
        DOWN
        IDLE
        ENTER
        QUIT
        SAVE
        CLICK
        CHANGE
    }

    class GameEngineGraphical {
        + run()
    }

    class KeyListener{
    }
    class MouseListener{
    }
    GameEngineGraphical --"1" Game
    GameEngineGraphical --"1" GamePainter
    GameEngineGraphical --"1" GameController
    GameEngineGraphical --"1" GraphicalInterface

    GameController --> KeyListener
    GameController --> MouseListener

    class GraphicalInterface {
        + paint()
    }
    GraphicalInterface --"1" DrawingPanel
    GraphicalInterface --"1" GamePainter
    GraphicalInterface --"1" GameController   
}

@enduml